--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/analytics.py", "use": "@vercel/python" }
-  ],
-  "routes": [
-    { "src": "/api/analytics", "dest": "api/analytics.py" }
-  ]
+    "builds": [
+        { "src": "api/index.py", "use": "@vercel/python" }
+    ],
+    "routes": [
+        { "src": "/(.*)", "dest": "api/index.py" }
+    ]
 }
